--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,34 @@
 /*  your css code here. If applicable */
+.container{
+	width:450px;
+	height:200px;
+	margin:auto;
+	margin-top:190px;
+	background-color:lightgray;
+	border-radius:50px;
+	display:flex;
+	justify-content:space-evenly;
+	align-items:center;
+	border:8px solid black;
+}
+
+.red{
+	height:100px;
+	width:100px;
+	background-color:red;
+	border-radius:50px
+}
+
+.green{
+	height:100px;
+	width:100px;
+	background-color:green;
+	border-radius:50px
+}
+
+.yellow{
+	height:100px;
+	width:100px;
+	background-color:yellow;
+	border-radius:50px
+}
